--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@
   padding: 0;
   box-sizing: border-box;
 }
-header {
-  background-color: #383737;
-}
 body {
   font-family: "Epilogue", "Open Sans", sans-serif;
   font-optical-sizing: auto;
+  /*   
+  flex-direction: column;
+  width: 100%; */
 }
 /* .shadow_header {
   width: 100%;
@@ -20,20 +20,29 @@ body {
   position: absolute;
   z-index: 1;
 } */
-.header-container {
+header {
+  background-color: #383737;
+  display: flex;
+  justify-content: center;
   color: #fffcf7;
   width: 100%;
   height: 95px;
-  z-index: 1;
-  display: flex;
-  justify-content: center;
 }
-.header-sub-container {
+header section {
   width: 80%;
+  height: 100%;
+}
+nav {
   background-color: #383737;
   height: 95px;
   display: flex;
   justify-content: flex-end;
+}
+main {
+  background-color: #000000;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 .container-nav,
 .container-name {
@@ -42,40 +51,37 @@ body {
   height: 100%;
   gap: 1rem;
 }
-.nav-name {
+/* .nav-name {
   font-size: 1.6rem;
   text-transform: uppercase;
   font-weight: 600;
-}
-.only-gsm{
+} */
+.only-gsm {
   display: none;
 }
 .img_background_about {
   position: absolute;
+  overflow: hidden;
   z-index: 0;
-  width: 200%;
+  width: 100%;
   height: 924px;
 }
 .img_background_about {
   background-image: url("asset/PP_LucasMaroy_bef_nb\ copie\ 2.jpg");
-  background-position: center;
+  background-position: 50% 45%;
+  background-size: 1924px ;
 }
-.body-container {
-  width: 100%;
-  background-color: #000000;
-  z-index: 1;
-  display: flex;
-  justify-content: center;
-}
-.body-sub-container {
+.main-container {
   width: 80%;
   z-index: 1;
 }
-.about_container {
-  width: 100%;
-  height: 897px;
+.main-container h1 {
+  font-size: 1.5rem;
+  margin-bottom: 1.5rem;
+  margin-top: 4rem;
+  color: #3cff00;
 }
-.about_container h1 {
+.main-container #main_title {
   margin-top: 5rem;
   text-align: left;
   word-spacing: 50px;
@@ -84,47 +90,35 @@ body {
   text-transform: uppercase;
   color: #3cff00;
 }
+.about_container {
+  width: 100%;
+  height: 738px;
+  display: flex;
+  align-items: flex-end;
+}
 .about_contenue {
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-end;
   position: relative;
-  bottom: 200px;
-  width: 100%;
-  height: 100%;
-}
-/* .about_contenue img {
-  width: 30%;
-  border-radius: 17%;
-  box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.5);
-} */
-.textabout {
+  bottom: 124px;
   width: 40%;
-  display: flex;
   gap: 1rem;
-}
-
-.textabout h2 {
   color: #d3d3d3;
+}
+.about_contenue #ttile_about {
+  align-self: flex-start;
   font-weight: 500;
 }
-.textabout p {
+.about_contenue p {
   text-align: justify;
   color: #d3d3d3;
   word-spacing: -2px;
 }
-.title-education {
-  margin-bottom: 1.5rem;
-  margin-top: 4rem;
-  color: #3cff00;
-}
-.educ_canontainer {
+.educ_contenue {
   width: 100%;
-  height: 400px;
+  height: 372px;
   display: grid;
   grid-template: 1fr 1fr/1fr 1fr;
   gap: 1rem;
-  margin-bottom: 8rem;
 }
 .ed-1,
 .ed-2,
@@ -157,18 +151,12 @@ body {
 .ed-4 p {
   color: #3cff00;
 }
-
-.title_expe {
-  margin-bottom: 1.5rem;
-  color: #3cff00;
-}
 .expe_container {
   width: 100%;
-  height: 608px;
+  height: 519px;
   display: grid;
   grid-template: 1fr 1fr 1fr /1fr 1fr;
   gap: 1rem;
-  margin-bottom: 8rem;
 }
 .ex-1,
 .ex-2,
@@ -179,10 +167,10 @@ body {
   border-radius: 20px;
   padding: 1.5rem;
 }
-.ex-2{
+.ex-2 {
   grid-area: 1/2/1/3;
 }
-.ex-6{
+.ex-6 {
   grid-area: 3/2/4/3;
 }
 .ex-2,
@@ -198,7 +186,6 @@ body {
   align-items: center;
   color: #3cff00;
 }
-
 .ex-1,
 .ex-4,
 .ex-5 {
@@ -215,10 +202,6 @@ body {
 .ex-1 p,
 .ex-4 p,
 .ex-5 p {
-  color: #3cff00;
-}
-.title_skils {
-  margin-bottom: 1.5rem;
   color: #3cff00;
 }
 .skils {
@@ -307,11 +290,6 @@ body {
   position: absolute;
   left: 73%;
 }
-.title_lunguage {
-  margin-top: 8rem;
-  margin-bottom: 1.5rem;
-  color: #3cff00;
-}
 .lunguage {
   width: 100%;
   height: 218px;
@@ -358,25 +336,21 @@ body {
 .xp-lu-3 {
   width: 10%;
 }
-.link_container{
+footer {
   width: 100vw;
   height: 100%;
   background-color: rgb(234, 234, 234);
-  border: 2px solid #d3d3d355;
   display: flex;
   justify-content: center;
 }
-.link_sub_container #title_contact{
+.link_sub_container #title_contact {
   margin: 16px 0 10px 0;
 }
 .link_sub_container {
   width: 80%;
-  height: 100%;
-  
 }
 .link {
   width: 80%;
-  height: 100%;
   display: flex;
   gap: 1.5rem;
   margin-bottom: 1rem;
@@ -386,7 +360,8 @@ body {
   text-decoration: none;
   color: #000;
 }
-.link a:hover, .link p:hover{
+.link a:hover,
+.link p:hover {
   text-decoration: underline;
   color: #3cff00;
 }
@@ -399,60 +374,98 @@ body {
   color: #ffffff;
 }
 @media only screen and (max-width: 500px) {
-  .educ_canontainer {
+  .educ_contenue {
     grid-template: 1fr 1fr 1fr 1fr / 100%;
     height: 1202px;
   }
-  .expe_container{
+  .expe_container {
     display: flex;
     flex-direction: column;
     height: 908px;
   }
-  .skils{
-   
+  .skils {
     /* width: 400px; */
     height: 450px;
     width: 100%;
     align-items: none;
   }
-  .sk-1,.sk-2,.sk-3,.sk-4,.sk-5,.sk-6,.sk-7,.sk-8{
-    flex-direction: row;
+  .sk-1,
+  .sk-2,
+  .sk-3,
+  .sk-4,
+  .sk-5,
+  .sk-6,
+  .sk-7,
+  .sk-8 {
+    flex-direction: column;
+    align-items: flex-start;
     width: 100%;
     margin-block: 16px;
   }
-  .sk-1 h2,.sk-2 h2,.sk-3 h2,.sk-4 h2,.sk-5 h2,.sk-6 h2,.sk-7 h2,.sk-8 h2{
+  .sk-1 h2,
+  .sk-2 h2,
+  .sk-3 h2,
+  .sk-4 h2,
+  .sk-5 h2,
+  .sk-6 h2,
+  .sk-7 h2,
+  .sk-8 h2 {
     margin-bottom: 4px;
     /* align-self: ; */
   }
-  .sk-sb-1,.sk-sb-2,.sk-sb-3,.sk-sb-4,.sk-sb-5,.sk-sb-6,.sk-sb-7,.sk-sb-8{
+  .sk-sb-1,
+  .sk-sb-2,
+  .sk-sb-3,
+  .sk-sb-4,
+  .sk-sb-5,
+  .sk-sb-6,
+  .sk-sb-7,
+  .sk-sb-8 {
     width: 70%;
     margin-left: 0px;
     /* position: relative; */
   }
-  .pourcentage{
-    right: 10%;
+  .lunguage{
+    width: 400px;
+    align-items: none;
   }
-  .textabout{
+  .lu-1,.lu-2,.lu-3{
+    flex-direction: column;
+    align-items: flex-start;
     width: 100%;
-    display: inline;;
+    margin-block: 16px;
+  }
+  .lu-sb-1,.lu-sb-2,.lu-sb-3{
+    width: 70%;
+    margin-left: 0px;
+  }
+  .pourcentage {
+    left: 83%;
+  }
+  .about_contenue {
+    width: 100%;
+    display: inline;
     margin-bottom: 4rem;
   }
-  .textabout #title_about{
+  .about_contenue #title_about {
     margin-bottom: 8px;
   }
-  .only-gsm{
+  .only-gsm {
     display: block;
     width: 2rem;
   }
-  .nav-about,.nav-education,.nav-experience,.nav-skills,.nav-speak,.nav-contact{
+  .container-nav a {
     display: none;
   }
-  .link{
+  footer {
+    height: 100%;
+  }
+  .link {
     flex-direction: column;
     margin-bottom: 2px;
     gap: 1rem;
   }
-  .link:last-child{
+  .link:last-child {
     margin-bottom: 1rem;
   }
 }
